Update test per Coleen's comments: - need to add java.security.manager=allow just to be safe - simplify logic to read classfile from disk (ref ClassUnloadCommon.getClassData())